# charaa

./: .gitignore  CLAUDE.md  README.md  presentation.tex
.claude/: settings.json  sync-backend.sh
Birdss/: package-lock.json  package.json  strict-json.txt
Birdss/src/: start.ts  styles.css
Birdss/src/components/: AIInsightPanel.tsx  AudioInput.tsx  BirdSpeciesGallery.tsx  EcologicalAnalysisPanel.tsx  EnvFactors.tsx  ForestHealthVerdict.tsx  ForestMetricsCard.tsx  ForestRangeInfo.tsx  ForestScene3D.tsx  ImageIntelligence.tsx  InteractiveMap.tsx  LayerControls.tsx  LocationEnvironmentPanel.tsx  LocationInput.tsx  MapPreview.tsx  ResultsDisplay.tsx  WildlifeGallery.tsx
Birdss/src/lib/: birdApi.ts  ecologicalAnalysis.ts  fireApi.ts  forestApi.ts  ragApi.ts  scenePlanner.ts  weather.ts  wikiThumbnail.ts
Birdss/src/routes/: index.tsx
birdss_backend/: .gitignore  README.md  pyproject.toml  test.txt  test_forest.py
birdss_backend/app/: __init__.py
birdss_backend/app/routes/: __init__.py  analyze_audio.py  forest_health.py  list_species.py
birdss_backend/app/scripts/: build_fhi_training_data.py  download_dataset.py  fhi_model.pkl  train_fhi_model.py
birdss_backend/app/utils/: __init__.py  audio.py  detect_species.py  fhi_predictor.py
birdss_backend/dataset/rag/: app.py  build_final_database.py  repair_index.py
birdss_backend/dataset/rag/core/: structured_facts.py
birdss_backend/species2vec/: __init__.py  build_corpus.py  evaluate.py  inference.py  requirements.txt  train.py
birdss_backend/species2vec/data/: corpus.pkl
(+3 files in other folders)
